css/mdl2-ui-icons.css
/*!
 * MDL2 UI Icons v1.0.0
 *
 * License https://github.com/devyr/mdl2-ui-icons (MIT License)
 */
@font-face {
    font-family: 'MDL2 UI';
    font-style: normal;
    font-weight: 900;
    src: url('../fonts/mdl2.ttf');
}

.icon {
    display: inline-block;
    /* font: normal normal normal 14px/1 'MDL2 UI'; */
    /* font-size: inherit; */
    font-family: 'MDL2 UI';
    font-weight: 900;
    font-style: normal;
    font-variant: normal;
    line-height: 1;
    text-rendering: auto;
    vertical-align: -0.2em;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.icon-lg {
    font-size: 1.33333em;
    line-height: 0.75em;
}

.icon-xs {
    font-size: 0.75em;
}
  
.icon-sm {
    font-size: 0.875em;
}
  
.icon-2x {
    font-size: 2em;
}
  
.icon-3x {
    font-size: 3em;
}
  
.icon-4x {
    font-size: 4em;
}
  
.icon-5x {
    font-size: 5em;
}

.icon-6x {
    font-size: 6em;
}

.icon-7x {
    font-size: 7em;
}

.icon-8x {
    font-size: 8em;
}

.icon-9x {
    font-size: 9em;
}

.icon-10x {
    font-size: 10em;
}

.icon-fw {
    width: 1.28571em;
    text-align: center;
}

.icon-ul {
    padding-left: 0;
    margin-left: 2.14286em;
    list-style-type: none;
}

.icon-ul > li {
    position: relative;
}

.icon-li {
    position: absolute;
    left: -2.14286em;
    width: 2.14286em;
    top: 0.14286em;
    text-align: center;
}

.icon-li.icon-lg {
    left: -1.85714em;
}

.icon-border {
    padding: .2em .25em .15em;
    border: solid 0.08em #eee;
    border-radius: .1em;
}

.icon-pull-left {
    float: left;
}

.icon-pull-right {
    float: right;
}

.icon.icon-pull-left {
    margin-right: .3em;
}

.icon.icon-pull-right {
    margin-left: .3em;
}

.icon.pull-left {
    margin-right: .3em;
}

.icon.pull-right {
    margin-left: .3em;
}

.icon-spin {
    -webkit-animation: icon-spin 2s infinite linear;
    -moz-animation: icon-spin 2s infinite linear;
    -o-animation: icon-spin 2s infinite linear;
    animation: icon-spin 2s infinite linear;
}

.icon-pulse {
    -webkit-animation: icon-spin 1s infinite steps(8);
    -moz-animation: icon-spin 1s infinite steps(8);
    -o-animation: icon-spin 1s infinite steps(8);
    animation: icon-spin 1s infinite steps(8);
}

@-webkit-keyframes icon-spin {
    0% {
        -webkit-transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -ms-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(359deg);
        -moz-transform: rotate(359deg);
        -ms-transform: rotate(359deg);
        -o-transform: rotate(359deg);
        transform: rotate(359deg);
    }
}

@-moz-keyframes icon-spin {
    0% {
        -webkit-transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -ms-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(359deg);
        -moz-transform: rotate(359deg);
        -ms-transform: rotate(359deg);
        -o-transform: rotate(359deg);
        transform: rotate(359deg);
    }
}

@-o-keyframes icon-spin {
    0% {
        -webkit-transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -ms-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(359deg);
        -moz-transform: rotate(359deg);
        -ms-transform: rotate(359deg);
        -o-transform: rotate(359deg);
        transform: rotate(359deg);
    }
}

@keyframes icon-spin {
    0% {
        -webkit-transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -ms-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(359deg);
        -moz-transform: rotate(359deg);
        -ms-transform: rotate(359deg);
        -o-transform: rotate(359deg);
        transform: rotate(359deg);
    }
}

.icon-rotate-90 {
    -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=1)";
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}
  
.icon-rotate-180 {
    -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2)";
    -webkit-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
}

.icon-rotate-270 {
    -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=3)";
    -webkit-transform: rotate(270deg);
    -ms-transform: rotate(270deg);
    transform: rotate(270deg);
}

.icon-flip-horizontal {
    -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1)";
    -webkit-transform: scale(-1, 1);
    -ms-transform: scale(-1, 1);
    transform: scale(-1, 1);
}

.icon-flip-vertical {
    -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1)";
    -webkit-transform: scale(1, -1);
    -ms-transform: scale(1, -1);
    transform: scale(1, -1);
}

:root .icon-rotate-90,
:root .icon-rotate-180,
:root .icon-rotate-270,
:root .icon-flip-horizontal,
:root .icon-flip-vertical {
    filter: none;
}

.icon-stack {
    position: relative;
    display: inline-block;
    width: 2em;
    height: 2em;
    line-height: 2em;
    vertical-align: middle;
}

.icon-stack-1x, .icon-stack-2x {
    position: absolute;
    left: 0;
    width: 100%;
    text-align: center;
}

.icon-stack-1x {
    line-height: inherit;
}

.icon-stack-2x {
    font-size: 2em;
}

.icon-inverse {
    color: #fff;
}

.icon-global-navigation-button:before {
    content: '\e700';
}

.icon-wifi:before {
    content: '\e701';
}

.icon-bluetooth:before {
    content: '\e702';
}

.icon-connect:before {
    content: '\e703';
}

.icon-internet-sharing:before {
    content: '\e704';
}

.icon-vpn:before {
    content: '\e705';
}

.icon-brightness:before {
    content: '\e706';
}

.icon-map-pin:before {
    content: '\e707';
}
/* ... */

